@@ -1,3 +1,6 @@
+2016/7/27 v79
+	1. Fix the active spell's cooldown won't refresh if you active the hidden global cooldown option.
+
 2016/7/26 v78
 	1. Change the mechanism of the container items's refresh for auto-generated popup action bars, reduce the cost of the system.
 
